GPC/tests/examples/fail/errBoolNot.gpc

int GPRM::Test::errBoolNot() {
    
    int x = 5;
    bool y = !x;
    return x;

}
